[package]
name = "pyo3-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_example"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rayon = "1.8.1"
serde = {version="1.0.195", features=["derive"]}
serde_json = {version="1.0.111", features=["unbounded_depth"]}
serde_stacker = "0.1.11"

